# cppackage

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  devlog.md
src/: main.cpp
